# diogenesanalytics.github.io

./: .dockerignore  Dockerfile  Makefile  README.md  _config.yml  about.html  blog.html  index.html  pyproject.toml
.github/workflows/: tests.yml
_includes/: article.css
_jupyter/notebooks/: 2022-11-22-average-daily-decisions.ipynb  2024-04-11-expected-us-housing-price.ipynb  2024-04-17-godfather-dons-assassinated.ipynb  2024-05-12-rent-or-buy.ipynb  2024-05-19-optimal-options.ipynb  2024-05-20-value-cost-ratio.ipynb  2024-05-22-vcr-redux.ipynb  2024-06-07-visa-advantage.ipynb  2024-09-09-optimal-prop-sales-strat.ipynb  2024-10-29-mathematics-of-matching.ipynb  2024-11-20-defining-advantage.ipynb  2025-02-26-reasoning-about-utility.ipynb  2025-03-12-the-travel-problem.ipynb  2025-04-20-defining-advantage.ipynb  2025-05-20-darwinian-fitness-game.ipynb  2025-05-27-utility-mirage.ipynb  2025-05-28-hierarchies-defined.ipynb  2025-05-31-hierarchy-as-meta-strategy.ipynb  2025-06-01-utility-and-strategy.ipynb  2025-06-19-risk-meta-strategy.ipynb  2025-08-03-compound-advantage-law.ipynb  2025-11-08-the-competition-problem.ipynb  2026-03-05-univerasl-decision-making-framework.ipynb  2026-03-30-housing-competition-ratio.ipynb  2026-06-18-stratgic-solving-and-position.ipynb  2026-06-20-theory-of-position.ipynb
_jupyter/scripts/filter_notebook/: pyproject.toml
_jupyter/scripts/filter_notebook/src/filter_notebook/: __init__.py  cli.py  filter.py
_layouts/: default.html
_posts/: 2022-11-22-average-daily-decisions.html  2024-09-09-optimal-prop-sales-strat.md  2024-10-29-mathematics-of-matching.md  2025-02-26-reasoning-about-utility.md  2025-03-12-the-travel-problem.md  2025-04-20-defining-advantage.md  2025-05-20-darwinian-fitness-game.md  2025-05-27-utility-mirage.md  2025-05-28-hierarchies-defined.md  2025-05-31-hierarchy-as-meta-strategy.md  2025-06-01-utility-and-strategy.md  2025-06-19-risk-meta-strategy.md  2026-03-05-universal-decision-making-framework.md  2026-03-30-housing-competition-ratio.md  2026-06-18-stratgic-solving-and-position.md
articles/: average_daily_decisions.html
assets/css/: base.css
favicon/: about.txt
pages/: about.html  blog.html
styles/css/: base.css
tests/: conftest.py  jekyll_server.py  requirements.txt  test_filter.py  test_makefile.py  test_website.py
