[project]
name = "blog_template"
version = "0.0.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "games @ git+https://github.com/DiogenesAnalytics/games.git",
    "blog_utils @ git+https://github.com/DiogenesAnalytics/blog_utils.git"
]

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]
filter_notebook = { git = "https://github.com/DiogenesAnalytics/filter_notebook.git" }

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
