[project]
name = "blog_template"
version = "0.0.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "games @ git+https://github.com/DiogenesAnalytics/games.git",
    "blog_utils @ git+https://github.com/DiogenesAnalytics/blog_utils.git"
]

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]
filter_notebook = { git = "https://github.com/DiogenesAnalytics/filter_notebook.git" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = "<=25.1.0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
deptry = "^0.23.0"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-pyproject = ">=1.2.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = "<=6.0.0"
mypy = ">=0.930"
nox = ">=2023.4.22"
nox-poetry = ">=1.0.3"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
seleniumbase = ">=4.24.0"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.coverage.paths]
tests = ["tests"]

[tool.coverage.run]
branch = true
source = ["tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.flake8]
select = "B,B9,C,D,DAR,E,F,N,RST,W"
ignore = "E203,E501,RST201,RST203,RST301,W503,DAR"
max-line-length = 80
max-complexity = 10
docstring-convention = "google"
rst-roles = "class,const,func,meth,mod,ref"
rst-directives = "deprecated"

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
ignore_missing_imports = true
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
