[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filter-notebook"
version = "0.1.0"
description = "CLI tool to filter Jupyter notebooks by front-matter metadata"
authors = [
    { name="Diogenes Analytics", email= "diogenesanalytics@gmail.com" }
]
dependencies = [
    "click>=8.0",
    "PyYAML",
    "nbformat"
]

[project.scripts]
filter-notebook = "filter_notebook.cli:main"
